--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="singin-footer">
                         <div class="one">
-                            <input type="checkbox">  <p> Remember me</p>
+                            <input type="checkbox"  class="checkbox">  <p> Remember me</p>
                         </div>
                         <div class="two">
                             <a href="#">Forgot Password?</a>
